--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GENERATE_SOURCEMAP=false
-REACT_APP_API_URL=http://localhost:8080/api/
-REACT_APP_API_URL_LOGIN=http://localhost:8080/auth/
+REACT_APP_API_URL=https://api.justlogistics.com.co/api/
+REACT_APP_API_URL_LOGIN=https://api.justlogistics.com.co/auth/
